--- a/module-1/lab-advanced-regex/your-code/main.ipynb
+++ b/module-1/lab-advanced-regex/your-code/main.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,10 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['puppy', 'puppies', 'puppy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('pupp\\w+', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,10 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('r\\wn', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ran', 'relay', 'race', 'run']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('r\\w+', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,10 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a sentence with special characters in it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.sub('!', 'i', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -143,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,10 +192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sentence', 'words', 'varying', 'lengths']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('\\w{5,}', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -166,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,10 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bet', 'bot', 'beat', 'bot', 'bat', 'but', 'bit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('b\\w+t', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -189,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,10 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['peaks', 'people', 'realize', 'breathtaking', 'Nearly']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('\\w*ea\\w*|\\w*eo\\w*', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,10 +291,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Teddy', 'Roosevelt', 'Abraham', 'Lincoln']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('[A-Z]\\w*', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,7 +318,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print (re.findall('[A-Z]\\w* [A-Z]\\w*', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,10 +342,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I will bet you $50 I can get the bartender to give me a free drink.', 'I am in!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('\\\"(.*?)\\\"', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -274,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,10 +375,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['30', '30', '14', '16', '10']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('[0-9]+', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -297,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,10 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '098-32-5295']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('\\d+-\\d+-\\d+', text))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,16 +435,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(847)789-0984', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('\\(\\d+\\)\\d+-\\d+', text))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 15. Use a regular expression to find and extract all the formatted numbers (both social security and phone) from the text below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['876-93-2289', '(847)789-0984', '098-32-5295', '(987)222-0901']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (re.findall('\\d+-\\d+-\\d+|\\(\\d+\\)\\d+-\\d+', text))"
    ]
   },
   {
