--- a/module-1/lab-string-operations/your-code/challenge-2.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-2.ipynb
@@ -72,10 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']"
    ]
   },
@@ -88,13 +89,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
+    "docs = ['doc1.txt', 'doc2.txt', 'doc3.txt']\n",
     "corpus = []\n",
     "\n",
-    "# Write your code here\n"
+    "#print(corpus)\n",
+    "\n",
+    "for i in docs:\n",
+    "    a = open(i,'r')\n",
+    "    corpus.append(a.read())\n",
+    "    \n",
+    "print(corpus)\n",
+    "    \n",
+    "# a.decode('utf8').strip()\n",
+    "\n",
+    "# Write your code here\n",
+    "#\\doc1.txt\n",
+    "#leer el contenido de cada documento y crear un array de strings con todas las palabras de los tres docs\n",
+    "#array de strings\n",
+    "#cuántas veces aparece la letra en cada documento. Luego sumarlas\n",
+    "\n"
    ]
   },
   {
@@ -106,9 +133,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ironhack is cool.', 'I love Ironhack.', 'I am a student at Ironhack.']\n"
+     ]
+    }
+   ],
    "source": [
     "print(corpus)"
    ]
@@ -136,11 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n",
+      "['ironhack is cool', 'i love ironhack', 'i am a student at ironhack']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "corpus = [e.lower() for e in corpus]\n",
+    "print(corpus)\n",
+    "corpus = [re.sub('[^\\w\\s]', \"\",e) for e in corpus]\n",
+    "print(corpus)"
    ]
   },
   {
@@ -152,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,11 +219,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ironhack', 'is', 'cool', 'i', 'love', 'am', 'a', 'student', 'at']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code here"
+    "for i in corpus:\n",
+    "    for x in i.split(' '):\n",
+    "        if x not in bag_of_words:\n",
+    "            bag_of_words.append(x)\n",
+    "print(bag_of_words)\n",
+    "            \n",
+    "\n",
+    "#bag_of_words = [bag_of_words.append(x) for i in corpus for x in i if x not in bag_of_words]\n",
+    "#print(bag_of_words)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "#todos los términos que existen, sin repetirse.\n",
+    "#unique terms in corpus"
    ]
   },
   {
@@ -204,17 +272,6 @@
    "metadata": {},
    "source": [
     "Now we define an empty array called `term_freq`. Loop `corpus` for a second time. In each loop, create a sub-loop to iterate the terms in `bag_of_words`. Count how many times each term appears in each doc of `corpus`. Append the term-frequency array to `term_freq`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "term_freq = []\n",
-    "\n",
-    "# Write your code here"
    ]
   },
   {
