--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        " 'suffice': 1}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
     "\n",
     "\n",
     "\n",
-    "e=poem.replace('\\n',' ').replace('.','').replace(',','').split(' ')\n",
+    "e=poem.replace('\\n',' ').replace('.','').split(' ')\n",
     "\n",
     "\n",
     "\n",
@@ -302,6 +302,8 @@
     }
    ],
    "source": [
+    "#Ordenando resultados\n",
+    "\n",
     "resultado = sorted(d.items(), key=operator.itemgetter(1))\n",
     "\n",
     "resultado"
@@ -318,14 +320,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['i', 'was', 'angry', 'with', 'my', 'told', 'my', 'my', 'wrath', 'did', 'was', 'angry', 'with', 'my', 'told', 'it', 'my', 'wrath', 'did', 'i', 'waterd', 'it', 'in', 'morning', 'with', 'my', 'i', 'sunned', 'it', 'with', 'with', 'soft', 'deceitful', 'it', 'grew', 'both', 'day', 'and', 'it', 'bore', 'an', 'apple', 'my', 'foe', 'beheld', 'it', 'he', 'knew', 'that', 'it', 'was', 'into', 'my', 'garden', 'the', 'night', 'had', 'veild', 'the', 'the', 'morning', 'glad', 'i', 'foe', 'outstretched', 'beneath', 'the']\n"
+      "['I', 'was', 'angry', 'with', 'my', 'friend', '', 'I', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'I', 'was', 'angry', 'with', 'my', 'foe', '', 'I', 'told', 'not', 'my', 'wrath', 'did', 'grow', '', '', 'And', 'I', 'waterd', 'fears', 'Night', '&', 'morning', 'with', 'my', 'tears', '', 'And', 'I', 'sunned', 'with', 'smiles', 'And', 'with', 'soft', 'deceitful', 'wiles', '', '', 'And', 'grew', 'both', 'day', 'night', '', 'Till', 'bore', 'apple', 'bright', '', 'And', 'my', 'foe', 'beheld', 'shine', 'And', 'he', 'knew', 'that', 'was', 'mine', '', '', 'And', 'into', 'my', 'garden', 'stole', '', '', 'When', 'night', 'had', 'veild', 'pole', '', 'In', 'morning', 'glad', 'I', 'see', '', 'My', 'foe', 'outstretched', 'beneath', 'tree']\n"
      ]
     }
    ],
@@ -353,12 +355,17 @@
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
     "# Your code here:\n",
-    "p2=poem.split(\" \")\n",
     "\n",
-    "print([i.lower() for i in p2 if (i.isalpha())])\n",
+    "p2=poem.replace('\\n',' ').replace('.','').replace(',','').replace(';','').replace(':','').split(' ')\n",
+    "\n",
+    "lst = []\n",
     "\n",
     "\n",
-    "\n",
+    "for i in p2:\n",
+    "    if i not in blacklist:\n",
+    "        lst.append(i)\n",
+    "        \n",
+    "print(lst)\n",
     "\n"
    ]
   },
