--- a/module-1/lab-string-operations/your-code/challenge-1.ipynb
+++ b/module-1/lab-string-operations/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Durante un tiempo no estuvo segura de si su marido era su marido.'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str_list = ['Durante', 'un', 'tiempo', 'no', 'estuvo', 'segura', 'de', 'si', 'su', 'marido', 'era', 'su', 'marido']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "' '.join(str_list) + \".\""
    ]
   },
   {
@@ -50,12 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Grocery list: bananas, bread, brownie mix, broccoli.'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "food_list = ['Bananas', 'Chocolate', 'bread', 'diapers', 'Ice Cream', 'Brownie Mix', 'broccoli']\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\"Grocery list: \" + \", \".join(e.lower() for e in food_list if e.startswith(\"b\")or e.startswith(\"B\")) + (\".\")"
    ]
   },
   {
@@ -69,9 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63.61725123519331\n",
+      "The area of the circle with radius: 4.5 is: 63.61725123519331.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -89,8 +122,14 @@
     "    \n",
     "    # Your code here:\n",
     "    \n",
+    "    return (x**2 * pi)\n",
+    "print(area(radius))\n",
+    " \n",
     "    \n",
-    "# Your output string here:"
+    "    \n",
+    " #your output string here:\n",
+    "\n",
+    "print(string1 + \" \" + str(radius) + \" \" + string2 + \" \" + str(area(radius))+ \".\")"
    ]
   },
   {
@@ -106,9 +145,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Some': 2, 'say': 3, 'the': 1, 'world': 1, 'will': 1, 'end': 1, 'in': 2, 'fire,': 1, 'ice': 2, 'From': 1, 'what': 1, 'I’ve': 1, 'tasted': 1, 'of': 2, 'desire': 1, 'I': 3, 'hold': 1, 'with': 1, 'those': 1, 'who': 1, 'favor': 1, 'fire': 1, 'But': 1, 'if': 1, 'it': 1, 'had': 1, 'to': 1, 'perish': 1, 'twice,': 1, 'think': 1, 'know': 1, 'enough': 1, 'hate': 1, 'To': 1, 'that': 1, 'for': 1, 'destruction': 1, 'Is': 1, 'also': 1, 'great': 1, 'And': 1, 'would': 1, 'suffice': 1}\n"
+     ]
+    }
+   ],
    "source": [
     "poem = \"\"\"Some say the world will end in fire,\n",
     "Some say in ice.\n",
@@ -120,7 +169,15 @@
     "Is also great\n",
     "And would suffice.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "\n",
+    "d = poem.replace(\"\\n\",\" \").replace(\".\",\" \").replace(\"\\n\",\" \").split()\n",
+    "diccionario = {}\n",
+    "for e in d:\n",
+    "    diccionario[e] = diccionario.get(e, 0) +1\n",
+    "print(diccionario)\n",
+    "    \n"
    ]
   },
   {
@@ -132,9 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'was', 'angry', 'with', 'my', 'friend', 'i', 'told', 'my', 'wrath', 'my', 'wrath', 'did', 'end', 'i', 'was', 'angry', 'with', 'my', 'foe:', 'i', 'told', 'not', 'my', 'wrath', 'did', 'grow', 'i', 'waterd', 'fears', 'night', 'morning', 'with', 'my', 'tears:', 'i', 'sunned', 'with', 'smiles', 'with', 'soft', 'deceitful', 'wiles', 'grew', 'both', 'day', 'night', 'till', 'bore', 'apple', 'bright', 'my', 'foe', 'beheld', 'shine', 'he', 'knew', 'that', 'was', 'mine', 'into', 'my', 'garden', 'stole', 'when', 'night', 'had', 'veild', 'pole', 'morning', 'glad', 'i', 'see', 'my', 'foe', 'outstretched', 'beneath', 'tree']\n"
+     ]
+    }
+   ],
    "source": [
     "blacklist = ['and', 'as', 'an', 'a', 'the', 'in', 'it']\n",
     "\n",
@@ -158,7 +223,21 @@
     "In the morning glad I see; \n",
     "My foe outstretched beneath the tree.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#poem2 = poem.lower().split()\n",
+    "#print ([x for x in poem2 if x.isalpha()])  \n",
+    "d = poem.lower().replace(\"\\n\",\" \").replace(\".\",\" \").replace(\"\\n\",\" \").replace(\"&\",\" \").replace(\";\",\" \").replace(\",\",\" \").split()\n",
+    "\n",
+    "\n",
+    "\n",
+    "lista1 = []\n",
+    "for i in d:\n",
+    "    if i not in blacklist:\n",
+    "        lista1.append(i)\n",
+    "        \n",
+    "print(lista1)\n",
+    "\n",
+    "  "
    ]
   },
   {
@@ -172,14 +251,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T', 'P']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poem = \"\"\"The apparition of these faces in the crowd;\n",
     "Petals on a wet, black bough.\"\"\"\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "re.findall(\"[A-Z]\",poem)\n"
    ]
   },
   {
@@ -191,13 +282,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'123abc'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
     "\n",
-    "# Your code here:\n"
+    "\n",
+    "    \n",
+    "asd(data)\n",
+    "        "
    ]
   },
   {
@@ -213,13 +318,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = ['123abc', 'abc123', 'JohnSmith1', 'ABBY4', 'JANE']\n",
-    "# Your code here:\n"
+    "# Your code here:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
